syntax = "proto3";

package authnz.authn;

import "api/authnz/authnz.proto";

option go_package = "github.com/xiaohuashifu/him/api/authnz/authn";

// 认证服务
service AuthnService {
    rpc Authn(AuthnReq) returns (AuthnResp) {}
}

// 认证请求
message AuthnReq {
    string token = 1; // 凭证
    repeated authnz.UserType user_types = 2; // 用户类型（其中一种即可，若空表示只需要凭证有效即可）
}

// 认证响应
message AuthnResp {
    authnz.Session session = 1; // 会话
}